tests/models/struct/named/struct/pass/alias.rs
use dade::model;
#[model]
struct InnerModel;
#[model]
struct TestModel {
    #[field(alias = "val")]
    value: InnerModel,
}
fn main() {}
